--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,18 @@
+body {
+    width: 100%;
+}
 
+#crudForm{
+    margin-top: 20px;
+}
+
+.highlight{
+    display: inline-block;
+    padding:3px 10px;
+    background:red;
+    outline:1px solid black;
+}
+
+.fGroup{
+    margin:10px 0;
+}
