--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,8 @@
       <script src="https://cdn.rawgit.com/konvajs/konva/1.6.3/konva.min.js"></script>
   </head>
   <body>
-    {{{body}}}
+      <div class="wrapper">
+          {{{body}}}
+      </div>
   </body>
 </html>
