--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,25 +1,29 @@
-<div id="container"></div>
+<div class="wrapper">
+    <div id="container"></div>
 
-<div id="crudForm">
-    <form method="post">
-        <div class="fGroup">
-            <label for="filename">File Name:</label>
-            <input type="text" name="filename" value="{{#if filename}}{{ filename }}{{/if}}">
-        </div>
+    <div id="crudForm">
+        <form action="/" method="post">
 
-        <div class="fGroup">
-            <label for="actionlist">Action:</label>
-            <span class="highlight">Save <input type="radio" name="actionlist" value="Save" checked></span>
-            <span class="highlight">Load <input type="radio" name="actionlist" value="Save"></span>
-            <span class="highlight">Delete <input type="radio" name="actionlist" value="Delete"></span>
-            <br>
-        </div>
+            <div class="fGroup">
+                <label for="filename">File Name:</label>
+                <input type="text" name="filename" value="{{#if filename}}{{ filename }}{{/if}}" required>
+            </div>
 
-        <input type="submit">
-    </form>
+            <div class="fGroup">
+                <label for="actionlist">Action:</label>
+                <span class="highlight">Save <input type="radio" name="actionlist" value="Save" checked></span>
+                <span class="highlight">Load <input type="radio" name="actionlist" value="Load"></span>
+                <span class="highlight">Delete <input type="radio" name="actionlist" value="Delete"></span>
+                <br>
+            </div>
+            <input type="hidden" name="canvasJSON">
+            <input type="submit">
+        </form>
+    </div>
 </div>
 
-<!--Initialise the canvas object for -->
+
+<!--Initialise the canvas object -->
 <script src="/javascripts/render.js"></script>
 
 <!--If the image JSON is available, extract the circles into the CURRENT stage.-->
