--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,26 +1,47 @@
-<div class="wrapper">
-    {{#if status}}
-        <h1>{{ status }}</h1>
-    {{/if}}
-    <div id="container"></div>
+<div class="row">
+    <div id="container" class="col-md-6"></div>
 
-    <div id="crudForm">
+    <div id="crudForm" class="col-md-5">
+        {{#if status}}
+            <h1>{{ status }}</h1>
+        {{/if}}
+
         <form action="/" method="post">
-
-            <div class="fGroup">
+            <legend>Options</legend>
+            <div class="form-group">
                 <label for="filename">File Name:</label>
-                <input type="text" name="filename" value="{{#if filename}}{{ filename }}{{/if}}" required>
+                <input type="text" name="filename" class="form-control" value="{{#if filename}}{{ filename }}{{/if}}" required>
             </div>
 
-            <div class="fGroup">
-                <label for="actionlist">Action:</label>
-                <span class="highlight">Save <input type="radio" name="actionlist" value="Save" checked></span>
-                <span class="highlight">Load <input type="radio" name="actionlist" value="Load"></span>
-                <span class="highlight">Delete <input type="radio" name="actionlist" value="Delete"></span>
-                <br>
-            </div>
+            <fieldset class="form-group">
+                <label for="actionlist">Action</label>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="actionlist" id="actionlist" value="New;">
+                        New
+                    </label>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="actionlist" id="actionlist" value="Save" checked>
+                        Save
+                    </label>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="actionlist" id="actionlist" value="Load">
+                        Load
+                    </label>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input type="radio" class="form-check-input" name="actionlist" id="actionlist" value="Delete">
+                        Delete
+                    </label>
+                </div>
+            </fieldset>
             <input type="hidden" name="canvas" id="canvasJSON">
-            <input type="submit">
+            <button type="submit" class="btn btn-primary">Submit!</button>
         </form>
     </div>
 </div>
