--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
       <link rel='stylesheet' href='/stylesheets/style.css'>
       <script src="https://cdn.rawgit.com/konvajs/konva/1.6.3/konva.min.js"></script>
   </head>
   <body>
-      <div class="wrapper">
+      <div id="wrapper" class="container-fluid">
+          <div class="col-md-12" id="header">
+              <div class="well">
+                  <h1>OG Canvas Drawing Application</h1>
+                  <p>Sean Ryan | sean@tech1337.co.uk</p>
+              </div>
+          </div>
           {{{body}}}
       </div>
+
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
